added js animation & color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <title>Conner Pinson</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Inconsolata|Noto+Sans|Overpass|ZCOOL+QingKe+HuangYou" rel="stylesheet">
     </head>
@@ -53,6 +54,7 @@
         function display(x) {
             var descname = document.getElementById("description" + x.id)
             descname.style.display = "inline"
+            descname.classList.add('textAppear')
         }
         function remove(x) {
             var descname = document.getElementById("description" + x.id)
