Fixed resume display issue for mobile

--- a/resume.html
+++ b/resume.html
@@ -14,10 +14,7 @@
     </div>
 
     <div id="wrapper">
-        <object id="resume" data="include/ConnerPinsonResume.pdf" type="application/pdf" width = "850" height = "1100">
-            Your browser does not support pdfs, <a href="include/ConnerPinsonResume.pdf">click here to
-            download the file.</a>
-            </object>
+        <iframe src="https://drive.google.com/file/d/1T5N0bSWW3EXYlYDCYdtAiJDCGqv0lbTb/preview" width="850" height="1100"></iframe>
     </div>
 
 </html>
