--- a/resume.html
+++ b/resume.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Conner Pinson Resume</title>
-        <link href="main.css" rel="stylesheet" type="text/css"/>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Inconsolata|Noto+Sans|Overpass|ZCOOL+QingKe+HuangYou" rel="stylesheet">
-    </head>
 
-    <div>
-        <a href="index.html"><i id="back" class="fas fa-chevron-left"></i></a>
-    </div>
+<head>
+    <meta charset="utf-8" />
+    <title>Conner Pinson Resume</title>
 
-    <div id="wrapper">
-        <iframe src="https://drive.google.com/file/d/1T5N0bSWW3EXYlYDCYdtAiJDCGqv0lbTb/preview" width="850" height="1100"></iframe>
-    </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135572852-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-135572852-1');
+    </script>
+
+    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Noto+Sans|Overpass|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+</head>
+
+<div>
+    <a href="index.html"><i id="back" class="fas fa-chevron-left"></i></a>
+</div>
+
+<div id="wrapper">
+    <iframe src="https://drive.google.com/file/d/1T5N0bSWW3EXYlYDCYdtAiJDCGqv0lbTb/preview" width="850" height="1100"></iframe>
+</div>
 
 </html>
-
