Migrate to Devblog from Medium

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
     <div id="row3">
         <div class="iconLeft">
-            <a id="Medium" onmouseover="display(this)" onmouseout="remove(this)" href="https://medium.com/@pinsonconner">
-                <i class="fab fa-medium-m"></i>
+            <a id="Medium" onmouseover="display(this)" onmouseout="remove(this)" href="https://ckpinson.hashnode.dev/">
+                <i class="fas fa-pencil-alt"></i>
             </a>
         </div>
         <div class="iconRight">
