--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <h2 id="descriptionGit">creating software.</h2>
         <h2 id="descriptionLinkedIn">networking.</h2>
         <h2 id="descriptionYouTube">producing videos.</h2>
-        <h2 id="descriptionTwitter">interacting.</h2>
-        <h2 id="descriptionBio">always learning.</h2>
+        <h2 id="descriptionTwitter">socializing.</h2>
+        <h2 id="descriptionBio">developing.</h2>
     </header>
     <div id="row1">
         <div class="iconLeft">
