Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </a>
         </div>
         <div class="iconRight">
-            <a id="LinkedIn" onmouseover="display(this)" onmouseout="remove(this)" href="https://www.linkedin.com/in/conner-pinson-50110a140/">
+            <a id="LinkedIn" onmouseover="display(this)" onmouseout="remove(this)" href="https://www.linkedin.com/in/conner-pinson/">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </div>
