--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div id="row1">
         <div class="iconLeft">
-            <a id="Email" onmouseover="display(this)" onmouseout="remove(this)" href="mailto:conner.pinson@vanderbilt.edu">
+            <a id="Email" onmouseover="display(this)" onmouseout="remove(this)" href="mailto:pinsonconner@gmail.com">
                 <i class="far fa-envelope"></i>
             </a>
         </div>
