--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div id="row1">
         <div class="iconLeft">
-            <a id="Email" onmouseover="display(this)" onmouseout="remove(this)" href="mailto:pinsonconner@gmail.com">
+            <a id="Email" onmouseover="display(this)" onmouseout="remove(this)" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%70%69%6E%73%6F%6E%63%6F%6E%6E%65%72%40%67%6D%61%69%6C%2E%63%6F%6D">
                 <i class="far fa-envelope"></i>
             </a>
         </div>
